2007-06-09 Carlos Nieves Onega <cnieves (AT) iespana (DOT) es>

	* utils/mk_verilog_syms.c: Avoid writting '\r' to files on MinGW.

	Applied patch #1733826 from Cesar Strauss. Thanks.
	When using the "w" mode in fopen, MinGW translates LF into CR-LF. 
	This creates havoc when reading the same file again, when sharing 
	schematics files with other systems, and when placing them in a VCS.

	This can be avoided by using the "wb" mode. The "b" is ignored on 
	all POSIX conforming systems, according to these sources:

	http://www.die.net/doc/linux/man/man3/fopen.3.html
	http://www.opengroup.org/onlinepubs/009695399/functions/fopen.html

	There are other ways, however. Adding

	#include <fcntl.h>
	int _fmode = _O_BINARY;

	on some source file should work as well. Another way is linking 
	against the MinGW supplied binmode.o, which does exactly that.

2007-05-26 Ales Hvezda   <ahvezda@geda.seul.org>

	* tests/spice-sdb/Makefile.am: Oops, because of the below disable,
	need to explicitly include run_tests.sh.  This needs to b undone 
	once these tests pass make distcheck again.
2007-06-04 Peter Brett <peter@peter-b.co.uk>

	* src/g_netlist.c, src/g_rc.c, src/vams_misc.c: Replace deprecated
	Guile functions & macros.

	Replace deprecated SCM_STRINGP, SCM_INUM, SCM_INUMP & SCM_MAKINUM
	with recommended equivalents for Guile 1.8.
	
2007-05-25 Ales Hvezda   <ahvezda@geda.seul.org>

	* tests/spice-sdb/Makefile.am: Disabled spice-sdb tests
	temporarily since they break make distcheck.  Will re-enable
	once it is determined what is going wrong (for the next release).

        * configure.ac: Updated version to 20070526 in prep for the next
        release.

2007-05-13 Ales Hvezda   <ahvezda@geda.seul.org>

	* scheme/Makefile.am, gnet-osmond.scm: Added new gnetlist backend
	from John Doty. Thanks!

2007-04-29 Ales Hvezda   <ahvezda@geda.seul.org>

	* tests/Makefile.am: Moved the VHDL regression test into my private