@@ -1,3 +1,8 @@
+2007-06-09 Ales Hvezda   <ahvezda@geda.seul.org>
+
+	* scheme/scheme/gnet-calay.scm: Commited new version of gnet-calay
+	from John with various fixes.
+
 2007-06-09 Carlos Nieves Onega <cnieves (AT) iespana (DOT) es>
 
 	* utils/mk_verilog_syms.c: Avoid writting '\r' to files on MinGW.
